fix: hide overflow on mobile

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -40,6 +40,7 @@ body {
 	@include breakpoint(xs) {
 		max-width: 100vw;
 		top: unset;
+		overflow-x: hidden;
 	}
 	.left-sidebar,
 	.right-sidebar {
